--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,12 @@
   box-shadow: 0 4px 4px 0 rgba(0,0,0,0.2);
   background-color: white;
   transition: 0.3s;
-  padding: 10px 10px;
+
   cursor: pointer;
   font-size: 25;
   text-align: center;
-  width: 100%;
-  height: auto;
+  width: auto;
+ 
   border-radius: 2px; /* 5px rounded corners */
   margin: 4px 4px;
 }
@@ -41,6 +41,7 @@ nav
   left: 0;
   top: 0;
   width: 100%;
+
 
 }
 #list{
